name:                hsblog-gen
version:             0.1.0.0
synopsis:            Simple Haskell blog generator
description:         Please see readme.md
homepage:            https://github.com/soupi/learn-haskell-blog-generator#readme
license-file:        LICENSE.txt
author:              Gil Mizrahi
maintainer:          gilmi@posteo.net
copyright:           2020 Gil Mizrahi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  readme.md

library
  hs-source-dirs:      src
  exposed-modules:     Markup
                       Markup.Internal
                       Html
                       Html.Internal
                       MarkupToHtml
                       Process

  ghc-options:         -Wall -fno-warn-type-defaults
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath

executable hsblog-gen
  hs-source-dirs:      app
  main-is:             blog_gen.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , hsblog-gen
                     , optparse-applicative

